<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="registroActivity"
            type="com.sisMoviles.fixtech.RegistroActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#455156">

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/azul"
            android:text="@string/register_button"
            android:textSize="32sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="390dp"
            android:layout_height="629dp"
            android:layout_marginBottom="42dp"
            android:backgroundTint="@color/grisclaro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:hint="@string/porfilepicture"
                    android:inputType="text"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText8"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:inputType="text"
                    android:text=""
                    android:padding="10dp"
                    android:hint="@string/phonenumber"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText9"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:inputType="text"
                    android:text=""
                    android:padding="10dp"
                    android:hint="@string/password"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText10"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:padding="10dp"
                    android:inputType="text"
                    android:hint="@string/nickname"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText11"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:padding="10dp"
                    android:inputType="text"
                    android:hint="@string/email"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText12"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:padding="10dp"
                    android:inputType="text"
                    android:text=""
                    android:hint="@string/lastname"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText13"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edit_text_border_radius"
                    android:ems="10"
                    android:padding="10dp"
                    android:inputType="text"
                    android:hint="@string/name"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_medium"
                    android:text="@string/register_button"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.592" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="69dp"
                    android:layout_height="49dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_small" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="51dp"
                    android:layout_height="49dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    tools:layout_editor_absoluteX="307dp"
                    tools:layout_editor_absoluteY="549dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>