<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/publicacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#455156"
    tools:context=".Publicacion">

    <LinearLayout
        android:id="@+id/head_publicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="#F8F4F9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/logo_fixtech"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:src="@drawable/tech"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/icon_profile"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:src="@drawable/user" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewPost"
        android:layout_width="366dp"
        android:layout_height="703dp"
        android:backgroundTint="@color/grisclaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-6dp"
            tools:layout_editor_absoluteY="96dp">



            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="69dp"
                android:layout_height="49dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_small" />

            <TextView
                android:id="@+id/textViePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/post"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textviewPostTitle"
                android:layout_width="333dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/title"
                android:textColor="#606665"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textviewPostDescription"
                android:layout_width="340dp"
                android:layout_height="144dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="136dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/description"
                android:textColor="#606665"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/flow1"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/flow2"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/flow3"
                android:scaleType="centerCrop" />


            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/post_Flow"
                android:layout_width="324dp"
                android:layout_height="225dp"
                android:layout_marginTop="16dp"

                app:constraint_referenced_ids="image1,image2,image3"
                app:flow_horizontalGap="8dp"
                app:flow_maxElementsWrap="2"
                app:flow_verticalGap="8dp"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewPostDescription" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/post_isadraft"
                android:layout_width="204dp"
                android:layout_height="48dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/save_as_draft"
                android:textColor="#F8F4F9"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_Flow" />

            <Button
                android:id="@+id/post_btnAddImage"
                android:layout_width="227dp"
                android:layout_height="50dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:backgroundTint="@color/naranja"
                android:elevation="15dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/btn_addimage"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_isadraft" />

            <Button
                android:id="@+id/post_btnPublish"
                android:layout_width="227dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/azul"
                android:elevation="15dp"
                android:fontFamily="@font/nunito_semibold"
                android:hapticFeedbackEnabled="false"
                android:text="@string/btn_publish"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="visible"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_btnAddImage"
                app:layout_constraintVertical_bias="0.421" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>